<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_nav_inicio"
        android:title="@string/nav_inicio" />

    <item
        android:id="@+id/nav_busca"
        android:icon="@drawable/ic_nav_busca"
        android:title="@string/nav_busca" />

    <!-- Espaco reservado para o botao de scan, que flutua por cima da barra -->
    <item
        android:id="@+id/nav_scan"
        android:enabled="false"
        android:title="@string/nav_scan" />

    <item
        android:id="@+id/nav_listas"
        android:icon="@drawable/ic_nav_listas"
        android:title="@string/nav_listas" />

    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_nav_perfil"
        android:title="@string/nav_perfil" />

</menu>
