<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiente_venus"
    tools:context=".view.PerguntaFaixaEtariaActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCardTopo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFimIlustracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <ImageButton
        android:id="@+id/btnVoltar"
        style="@style/BotaoVoltar"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/desc_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPergunta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/espaco_grande"
        android:layout_marginEnd="@dimen/espaco_secao"
        android:lineSpacingMultiplier="0.95"
        android:text="@string/pergunta_faixa_etaria"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVoltar" />

    <View
        android:id="@+id/cardOpcoes"
        android:layout_width="346dp"
        android:layout_height="439dp"
        android:layout_marginStart="@dimen/espaco_medio"
        android:layout_marginEnd="@dimen/espaco_medio"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_card_opcoes"
        app:layout_constraintBottom_toTopOf="@+id/btnAvancar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineCardTopo" />

    <ImageView
        android:id="@+id/imgPergunta"
        android:layout_width="563dp"
        android:layout_height="202dp"
        android:layout_marginBottom="25dp"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        android:src="@drawable/perguntas"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineFimIlustracao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPergunta"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.8" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollOpcoes"
        android:layout_width="329dp"
        android:layout_height="267dp"
        android:layout_marginTop="@dimen/espaco_pequeno"
        android:layout_marginBottom="18dp"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="@+id/cardOpcoes"
        app:layout_constraintEnd_toEndOf="@+id/cardOpcoes"
        app:layout_constraintStart_toStartOf="@+id/cardOpcoes"
        app:layout_constraintTop_toBottomOf="@+id/guidelineFimIlustracao">

        <LinearLayout
            android:id="@+id/listaOpcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/espaco_grande"
            android:paddingEnd="@dimen/espaco_grande">

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:tag="UNDER_13"
                android:text="@string/faixa_menos_13" />

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/espaco_entre_opcoes"
                android:tag="AGE_13_17"
                android:text="@string/faixa_13_17" />

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/espaco_entre_opcoes"
                android:tag="AGE_18_24"
                android:text="@string/faixa_18_24" />

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/espaco_entre_opcoes"
                android:tag="AGE_25_34"
                android:text="@string/faixa_25_34" />

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/espaco_entre_opcoes"
                android:tag="AGE_35_44"
                android:text="@string/faixa_35_44" />

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/espaco_entre_opcoes"
                android:tag="AGE_45_54"
                android:text="@string/faixa_45_54" />

            <TextView
                style="@style/OpcaoPergunta"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/espaco_entre_opcoes"
                android:tag="AGE_55_PLUS"
                android:text="@string/faixa_acima_55" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAvancar"
        android:layout_width="348dp"
        android:layout_height="57dp"
        android:layout_marginStart="@dimen/espaco_grande"
        android:layout_marginEnd="@dimen/espaco_grande"
        android:layout_marginBottom="@dimen/espaco_grande"
        android:background="@drawable/bg_botao_avancar"
        android:text="@string/acao_avancar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/texto_botao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
